# rusty_chip

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
roms/: ACKNOLEDGEMENTS.md
src/: config.rs  main.rs
src/resources/: beep.rs  chip8.rs  config.rs  mod.rs  timer.rs
src/systems/: audio.rs  audio_setup.rs  emulator.rs  keyboard.rs  mod.rs  ui.rs
