[package]
name = "rusty-chip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default_features = false, features = ["bevy_winit", "bevy_audio", "wav"] }
bevy_egui = "0.18.0"
bevy_pixel_buffer = { version = "0.3.0", features = ["egui"] }
rand = "0.8.5"
rfd = "0.10.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
debug = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
