[package]
name = "rusty-chip"
version = "0.3.0"
resolver = "2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default_features = false, features = [
  "bevy_winit",
  "bevy_audio",
  "wav",
] }
bevy_egui = "0.23.0"
bevy_pixel_buffer = { version = "0.6.0", features = ["egui"] }
rand = "0.8.5"
rayon = "1.8.0"
rfd = "0.12.1"
scancode = "0.1.2"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
